# zin

./: .gitignore  LICENSE  Readme.md  dune-project  flake.nix  zin.opam
.github/workflows/: release.yml
lib/: ast.ml  cli.ml  dune  evaluator.ml  lexer.ml  parser.ml  run.ml  tokens.ml
test/: dune  test_zin.ml
